--- a/download.html
+++ b/download.html
@@ -6,21 +6,21 @@
 </head>
 <body>
 	<h2>Test Builds</h2>
-<a href="itms-services://?action=download-manifest&amp;url=https://dl.dropboxusercontent.com/s/urc0v8o1vbnlm36/manifest.plist">Staging</a><br/><br/><br/>
+<a href="itms-services://?action=download-manifest&amp;url=https://chillrdev.github.io/beta-ios/Builds/Staging/manifest.plist">Staging</a><br/><br/><br/>
 
-<a href="itms-services://?action=download-manifest&amp;url=https://dl.dropboxusercontent.com/s/5gn1amzzuovlf3v/manifest.plist">Prepod</a><br/><br/><br/>
+<a href="itms-services://?action=download-manifest&amp;url=https://chillrdev.github.io/beta-ios/Builds/Prepod/manifest.plist">Prepod</a><br/><br/><br/>
 
-<a href="itms-services://?action=download-manifest&amp;url=https://dl.dropboxusercontent.com/s/jm5j759v6e8fy0q/manifest.plist">Production</a><br/><br/><br/>
+<a href="itms-services://?action=download-manifest&amp;url=https://chillrdev.github.io/beta-ios/Builds/Production/manifest.plist">Production</a><br/><br/><br/>
 <br/><br/><br/>
 
 <h2>Old Production Builds</h2>
-<a href="itms-services://?action=download-manifest&amp;url=https://dl.dropboxusercontent.com/s/u5yupcohrhvkpy3/manifest.plist">V2.0 ()</a><br/><br/><br/>
-<a href="itms-services://?action=download-manifest&amp;url=https://dl.dropboxusercontent.com/s/taldyixok4i1i7l/manifest.plist">V1.20.1 (Uploaded On 11/03/2016)</a><br/><br/><br/>
-<a href="itms-services://?action=download-manifest&amp;url=https://dl.dropboxusercontent.com/s/i9emg8gwkhqem8q/manifest.plist">V1.20 (Uploaded On 03/03/2016)</a><br/><br/><br/>
-<a href="itms-services://?action=download-manifest&amp;url=https://dl.dropboxusercontent.com/s/vl5zmz9agjfphxf/manifest.plist">V1.18 (Uploaded On 10/01/2016)</a><br/><br/><br/>
-<a href="itms-services://?action=download-manifest&amp;url=https://dl.dropboxusercontent.com/s/1nxl7bgb1zcl1rh/manifest.plist">V1.17 (Uploaded On 03/12/2015)</a><br/><br/><br/>
-<a href="itms-services://?action=download-manifest&amp;url=https://dl.dropboxusercontent.com/s/imdq31elu9eku40/manifest.plist">V1.11.8 (Uploaded On 25/10/2015)</a><br/><br/><br/>
-<a href="itms-services://?action=download-manifest&amp;url=https://dl.dropboxusercontent.com/s/bjcosk6vl3hutee/manifest.plist">V1.11.7 (Uploaded on 13/09/2015)</a><br/><br/><br/>
+<a href="itms-services://?action=download-manifest&amp;url=https://chillrdev.github.io/beta-ios/Builds/Production/V2000/manifest.plist">V2.0 ()</a><br/><br/><br/>
+<a href="itms-services://?action=download-manifest&amp;url=https://chillrdev.github.io/beta-ios/Builds/Production/V1201/manifest.plist">V1.20.1 (Uploaded On 11/03/2016)</a><br/><br/><br/>
+<a href="itms-services://?action=download-manifest&amp;url=https://chillrdev.github.io/beta-ios/Builds/Production/V1200/manifest.plist">V1.20 (Uploaded On 03/03/2016)</a><br/><br/><br/>
+<a href="itms-services://?action=download-manifest&amp;url=https://chillrdev.github.io/beta-ios/Builds/Production/V1180/manifest.plist">V1.18 (Uploaded On 10/01/2016)</a><br/><br/><br/>
+<a href="itms-services://?action=download-manifest&amp;url=https://chillrdev.github.io/beta-ios/Builds/Production/V1170/manifest.plist">V1.17 (Uploaded On 03/12/2015)</a><br/><br/><br/>
+<a href="itms-services://?action=download-manifest&amp;url=https://chillrdev.github.io/beta-ios/Builds/Production/V1118/manifest.plist">V1.11.8 (Uploaded On 25/10/2015)</a><br/><br/><br/>
+<a href="itms-services://?action=download-manifest&amp;url=https://chillrdev.github.io/beta-ios/Builds/Production/V1117/manifest.plist">V1.11.7 (Uploaded on 13/09/2015)</a><br/><br/><br/>
 </body>
 </body>
 </html>
