--- a/v2130.html
+++ b/v2130.html
@@ -1,2 +1,12 @@
+<!DOCTYPE html>
 <html>
-https://github.com/chillrdev/beta-ios/releases/download/V2.1.3/manifest.plist
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <title>Chillr</title>
+</head>
+<body>
+        <br/><br/><br/>
+        <a href="itms-services://?action=download-manifest&amp;url=https://github.com/chillrdev/beta-ios/releases/download/V2.1.3/manifest.plist"><h1>Download</h1></a>
+        <br/><br/><br/>
+</body>
+</html>
