--- a/download/prepod.html
+++ b/download/prepod.html
@@ -1,1 +1,89 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <!-- Make the page mobile compatible -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Chillr</title>
+    <style media="screen">
+      *{
+        font-family: "Roboto", sans-serif;
+      }
+      html, body{
+        width: 100%;
+        height: 100%;
+        margin: 0px;
+        border: 0px;
+        padding: 0px;
+        position: relative;
+		line-height: 1.4;
+      }
+      .container{
+        width: 100%;
+        max-width: 600px;
+        margin: auto;
+        padding: 125px 20px 20px;
+        box-sizing: border-box;
+      }
+      .chillr-logo{
+        position: absolute;
+        top: 20px;
+        left: 20px;
+      }
+      .text-center{
+        text-align: center;
+      }
+      .button-wrapper{
+        padding: 40px 0px;
+      }
+      .button-wrapper a{
+        display: inline-block;
+        text-decoration: none;
+        padding: 15px 30px;
+        background-color: #00BB6E;
+        color: #FFFFFF;
+        box-shadow: none;
+        outline: none;
+        border: 0px;
+        font-size: 14px;
+        border-radius: 5px;
+      }
+      .text-content{
+        color: #545454;
+      }
+      .font-weight-300{
+        font-weight: 300;
+      }
+      .font-size-12{
+        font-size: 12px;
+      }
+      .padding-bottom-5{
+        padding-bottom: 5px;
+      }
+      @media (max-width: 500px) {
+        .container{
+          padding: 100px 20px 20px;
+        }
+        .chillr-logo{
+          width: 120px;
+        }
+      }
+    </style>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
+  </head>
+  <body>
+    <img src="https://s3.amazonaws.com/chillr/assets/email/chillr-logo.png" alt="Chillr" class="chillr-logo">
+    <div class="container">
+      <div class="text-center text-content">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </div>
+      <div class="text-center button-wrapper">
+        <a href="#">Click Here</a>
+      </div>
+      <div class="text-center">
+        <div class="inline text-center text-content font-size-12 padding-bottom-5">Powered By</div>
+        <img src="https://s3.amazonaws.com/chillr/assets/email/logo-hdfc.jpg" alt="Powered by HDFC">
+      </div>
+    </div>
+  </body>
+</html>
