--- a/download/prepod.html
+++ b/download/prepod.html
@@ -75,10 +75,10 @@
     <img src="https://s3.amazonaws.com/chillr/assets/email/chillr-logo.png" alt="Chillr" class="chillr-logo">
     <div class="container">
       <div class="text-center text-content">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        <b>iOS UPI UAT</b>
       </div>
       <div class="text-center button-wrapper">
-        <a href="#">Click Here</a>
+        <a href="itms-services://?action=download-manifest&url=https://github.com/chillrdev/beta-ios/releases/download/VPrepod/manifest.plist"><b>Download</b></a>
       </div>
       <div class="text-center">
         <div class="inline text-center text-content font-size-12 padding-bottom-5">Powered By</div>
