--- a/download/demo.html
+++ b/download/demo.html
@@ -76,7 +76,7 @@
     <img src="https://s3.amazonaws.com/chillr/assets/email/chillr-logo.png" alt="Chillr" class="chillr-logo">
     <div class="container">
       <div class="text-center text-content">
-        <b>iOS UPI UAT</b>
+        <b>iOS UPI</b>
       </div>
       <div class="text-center button-wrapper">
         <a href="itms-services://?action=download-manifest&url=https://github.com/chillrdev/beta-ios/releases/download/VStaging/manifest.plist"><b>Download</b></a>
