--- a/tc/download.html
+++ b/tc/download.html
@@ -1,34 +1,90 @@
+
 <!DOCTYPE html>
 <html>
-<head>
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <head>
+    <meta charset="utf-8">
+    <!-- Make the page mobile compatible -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Chillr</title>
-</head>
-<body>
-	<h2>Test Builds</h2>
-<a href="itms-services://?action=download-manifest&amp;url=https://github.com/chillrdev/beta-ios/releases/download/VStaging/manifest.plist">Staging</a><br/><br/><br/>
-
-<a href="itms-services://?action=download-manifest&amp;url=https://github.com/chillrdev/beta-ios/releases/download/VPrepod/manifest.plist">Prepod</a><br/><br/><br/>
-
-<a href="itms-services://?action=download-manifest&amp;url=https://github.com/chillrdev/beta-ios/releases/download/V2.2_beta/manifest.plist">Production</a><br/><br/><br/>
-<br/><br/><br/>
-
-<h2>Old Production Builds</h2>
-<br/><br/>
-<a href="itms-services://?action=download-manifest&amp;url=https://github.com/chillrdev/beta-ios/releases/download/V2.1.1/manifest.plist">V2.1.1</a><br/><br/><br/>
-<a href="itms-services://?action=download-manifest&amp;url=https://github.com/chillrdev/beta-ios/releases/download/V2.1/manifest.plist">V2.1</a><br/><br/><br/>
-<br/><br/></br>
-<a href="itms-services://?action=download-manifest&amp;url=https://github.com/chillrdev/beta-ios/releases/download/V2.0.2/manifest.plist">V2.0.2</a><br/><br/><br/>
-<a href="itms-services://?action=download-manifest&amp;url=https://github.com/chillrdev/beta-ios/releases/download/V2.0.1/manifest.plist">V2.0.1</a><br/><br/><br/>
-<a href="itms-services://?action=download-manifest&amp;url=https://github.com/chillrdev/beta-ios/releases/download/V2.0/manifest.plist">V2.0</a><br/><br/><br/>
-<br/><br/></br>
-<a href="itms-services://?action=download-manifest&amp;url=https://github.com/chillrdev/beta-ios/releases/download/V1.20.1/manifest.plist">V1.20.1 (Uploaded On 11/03/2016)</a>
-<a href="itms-services://?action=download-manifest&amp;url=https://github.com/chillrdev/beta-ios/releases/download/V1.20/manifest.plist">V1.20 (Uploaded On 03/03/2016)</a><br/>
-<br/><br/><br/>
-<a href="itms-services://?action=download-manifest&amp;url=https://github.com/chillrdev/beta-ios/releases/download/V1.18/manifest.plist">V1.18 (Uploaded On 10/01/2016)</a><br/><br/><br/>
-<a href="itms-services://?action=download-manifest&amp;url=https://github.com/chillrdev/beta-ios/releases/download/V1.17/manifest.plist">V1.17 (Uploaded On 03/12/2015)</a><br/><br/><br/>
-<a href="itms-services://?action=download-manifest&amp;url=https://github.com/chillrdev/beta-ios/releases/download/V1.11.8/manifest.plist">V1.11.8 (Uploaded On 25/10/2015)</a><br/><br/><br/>
-<a href="itms-services://?action=download-manifest&amp;url=https://github.com/chillrdev/beta-ios/releases/download/V1.11.8/manifest.plist">V1.11.7 (Uploaded on 13/09/2015)</a><br/><br/><br/>
-</body>
-</body>
+    <style media="screen">
+      *{
+        font-family: "Roboto", sans-serif;
+      }
+      html, body{
+        width: 100%;
+        height: 100%;
+        margin: 0px;
+        border: 0px;
+        padding: 0px;
+        position: relative;
+		line-height: 1.4;
+      }
+      .container{
+        width: 100%;
+        max-width: 600px;
+        margin: auto;
+        padding: 125px 20px 20px;
+        box-sizing: border-box;
+      }
+      .chillr-logo{
+        position: absolute;
+        top: 20px;
+        left: 20px;
+      }
+      .text-center{
+        text-align: center;
+      }
+      .button-wrapper{
+        padding: 40px 0px;
+      }
+      .button-wrapper a{
+        display: inline-block;
+        text-decoration: none;
+        padding: 15px 30px;
+        background-color: #00BB6E;
+        color: #FFFFFF;
+        box-shadow: none;
+        outline: none;
+        border: 0px;
+        font-size: 14px;
+        border-radius: 5px;
+      }
+      .text-content{
+        color: #545454;
+      }
+      .font-weight-300{
+        font-weight: 300;
+      }
+      .font-size-12{
+        font-size: 12px;
+      }
+      .padding-bottom-5{
+        padding-bottom: 5px;
+      }
+      @media (max-width: 500px) {
+        .container{
+          padding: 100px 20px 20px;
+        }
+        .chillr-logo{
+          width: 120px;
+        }
+      }
+    </style>
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
+  </head>
+  <body>
+    <img src="https://chillrdev.github.io/beta-ios/tc_57.jpg" alt="Chillr" class="chillr-logo">
+    <div class="container">
+      <div class="text-center text-content">
+        <b>iOS UPI</b>
+      </div>
+      <div class="text-center button-wrapper">
+        <a href="itms-services://?action=download-manifest&url=https://github.com/chillrdev/beta-ios/releases/download/VStaging/manifest.plist"><b>Download</b></a>
+      </div>
+      <div class="text-center">
+        <div class="inline text-center text-content font-size-12 padding-bottom-5">Powered By </div>
+        <img src="https://s3.amazonaws.com/chillr/assets/email/logo-hdfc.jpg" alt="Powered by ICICI">
+      </div>
+    </div>
+  </body>
 </html>
