--- a/tc/download.html
+++ b/tc/download.html
@@ -73,9 +73,9 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
   </head>
   <body>
-    <img src="https://chillrdev.github.io/beta-ios/tc_57.jpg" alt="Chillr" class="chillr-logo">
     <div class="container">
       <div class="text-center text-content">
+	<img src="https://chillrdev.github.io/beta-ios/tc_57.jpg" alt="Chillr" class="chillr-logo">
         <b>iOS UPI</b>
       </div>
       <div class="text-center button-wrapper">
@@ -83,7 +83,7 @@
       </div>
       <div class="text-center">
         <div class="inline text-center text-content font-size-12 padding-bottom-5">Powered By </div>
-        <img src="https://s3.amazonaws.com/chillr/assets/email/logo-hdfc.jpg" alt="Powered by ICICI">
+        <img src="icic_new.jpg" alt="Powered by ICICI">
       </div>
     </div>
   </body>
