--- a/tc/download.html
+++ b/tc/download.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <!-- Make the page mobile compatible -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Chillr</title>
+    <title>TC Pay</title>
     <style media="screen">
       *{
         font-family: "Roboto", sans-serif;
@@ -79,7 +79,7 @@
         <b>iOS UPI</b>
       </div>
       <div class="text-center button-wrapper">
-        <a href="itms-services://?action=download-manifest&url=https://github.com/chillrdev/beta-ios/releases/download/VStaging/manifest.plist"><b>Download</b></a>
+        <a href="itms-services://?action=download-manifest&url=https://github.com/chillrdev/beta-ios/releases/download/V8.50/manifest.plist"><b>Download</b></a>
       </div>
       <div class="text-center">
         <div class="inline text-center text-content font-size-12 padding-bottom-5">Powered By </div>
