--- a/tc/download.html
+++ b/tc/download.html
@@ -74,8 +74,8 @@
   </head>
   <body>
     <div class="container">
+	    <center><img src="https://chillrdev.github.io/beta-ios/tc_57.jpg" alt="Chillr" class="chillr-logo"></center>
       <div class="text-center text-content">
-	<img src="https://chillrdev.github.io/beta-ios/tc_57.jpg" alt="Chillr" class="chillr-logo">
         <b>iOS UPI</b>
       </div>
       <div class="text-center button-wrapper">
