--- a/tc/download.html
+++ b/tc/download.html
@@ -66,7 +66,7 @@
           padding: 100px 20px 20px;
         }
         .chillr-logo{
-          width: 120px;
+          width: 57px;
         }
       }
     </style>
@@ -74,7 +74,7 @@
   </head>
   <body>
     <div class="container">
-	    <center><img src="https://chillrdev.github.io/beta-ios/tc_57.jpg" alt="Chillr" class="chillr-logo"></center>
+	<img src="https://chillrdev.github.io/beta-ios/tc_57.jpg" alt="Chillr" class="chillr-logo">
       <div class="text-center text-content">
         <b>iOS UPI</b>
       </div>
