--- a/tc/download.html
+++ b/tc/download.html
@@ -25,12 +25,7 @@
         margin: auto;
         padding: 125px 20px 20px;
         box-sizing: border-box;
-      }
-      .chillr-logo{
-        position: absolute;
-        top: 20px;
-        left: 20px;
-      }
+      }	    
       .text-center{
         text-align: center;
       }
@@ -74,7 +69,7 @@
   </head>
   <body>
     <div class="container">
-	<img src="https://chillrdev.github.io/beta-ios/tc_57.jpg" alt="Chillr" class="chillr-logo">
+	    <div class="text-center"><img src="https://chillrdev.github.io/beta-ios/tc_57.jpg" alt="Chillr" class="chillr-logo"></div>
       <div class="text-center text-content">
         <b>iOS UPI</b>
       </div>
