--- a/tc/download.html
+++ b/tc/download.html
@@ -74,7 +74,8 @@
         <b>iOS UPI</b>
       </div>
       <div class="text-center button-wrapper">
-        <a href="itms-services://?action=download-manifest&url=https://github.com/chillrdev/beta-ios/releases/download/V8.50/manifest.plist"><b>Download</b></a>
+        <a href="itms-services://?action=download-manifest&url=https://github.com/chillrdev/beta-ios/releases/download/V8.50/manifest.plist"><b>Download V9.0.0</b></a>
+	<a href="itms-services://?action=download-manifest&url=https://github.com/chillrdev/beta-ios/releases/download/V9.10.0/manifest.plist"><b>Download V9.10.0</b></a>
       </div>
       <div class="text-center">
         <div class="inline text-center text-content font-size-12 padding-bottom-5">Powered By </div>
